Fixing some warnings